Fix for Issue reported by Alan Pope

--- a/usr/share/feren-welcome/community.html
+++ b/usr/share/feren-welcome/community.html
@@ -34,7 +34,7 @@
           <h2>&zwnj;Forum&zwnj;</h2>
           <p>&zwnj;Due to the Linux Mint base, you can also find help for any issues you might have at the following links.&zwnj;</p>
           <ul>
-            <li class="official-only"><a onclick="cmd('link?http://askubuntu.com/');cmd('')">Ask Ubuntu</a></li>
+            <li><a onclick="cmd('link?http://unix.stackexchange.com/');cmd('')">UNIX & Linux - Stack Exchange</a></li>
             <li><a onclick="cmd('link?https://forums.linuxmint.com');cmd('')">Linux Mint Forums</a></li>
           </ul>
         </div>
